# grant-recommender-ai

./: .env.example  .gitignore  README.md  esg_grants.csv  grants.csv  pyproject.toml  sample_grants_d0.csv  sample_grants_d1.csv  wsg_esg_grants.csv
src/: main.py  reference_main.py
src/events_listing_tool/: contants.py  main.py  post_csv_deduplication.py  web_crawler.py
src/events_listing_tool/scraper_output/: events.csv  events_post_processed.csv  events_post_processed_v1.csv
src/general_info_adviser_tool/: contants.py  general_info_advisor.py  main.py  web_crawler.py
src/general_info_adviser_tool/scraper_output/: business_guide_hong_kong.txt  business_guide_indonesia.txt  gen_info.txt
src/grants_recommender_tool/: contants.py  grant_recommender.py  main.py  web_crawler.py
src/grants_recommender_tool/scraper_output/: grants.csv  grants_020425.csv
src/grants_stocktake_tool/: contants.py  grant_recommender.py  main.py  web_crawler.py
src/grants_stocktake_tool/scraper_output/: grants3.csv  grants_2.csv  post_processed_grants_2.csv  post_processed_grants_3.csv
src/tool/: grant_recommender.py  web_crawler.py
